--- a/login/templates/base/base.html
+++ b/login/templates/base/base.html
@@ -5,16 +5,33 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <!-- 上述3个meta标签*必须*放在最前面，任何其他内容都*必须*跟随其后！ -->
-    <title>Bootstrap 101 Template</title>
+    <title>login</title>
 	{% load staticfiles %}
     <!-- Bootstrap -->
     <link href="{% static 'css/bootstrap.min.css' %}" rel="stylesheet">
-	<!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
-    <script src="https://cdn.bootcss.com/jquery/1.12.4/jquery.min.js"></script>
-    <!-- Include all compiled plugins (below), or include individual files as needed -->
-	<script src="{% static 'js/jquery.validate.js' %}"></script>
-    <script src="{% static 'js/bootstrap.min.js' %}"></script>
+	<link href="{% static 'css/bootstrapValidator.min.css' %}" rel="stylesheet">
+	<script src="https://cdn.bootcss.com/jquery/1.12.4/jquery.min.js"></script>
+	<script src="{% static 'js/bootstrapValidator.min.js' %}"></script>
 	<script src="{% static 'js/login.js' %}"></script>
+	<script src="{% static 'css/main.css' %}"></script>
+	<style>
+		.border {  
+			 /*border: 2px solid blue;*/
+		}
+		.mycenter {
+			position: absolute;
+			left: 66%;
+			top: 40%;		
+			margin-left: -210px;
+			margin-top: -165px;
+			padding: 60px;
+
+		}
+		.mypading{
+			padding-bottom: 20px;
+			height: 60px;
+		}
+	</style>
     <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
     <!--[if lt IE 9]>
@@ -23,10 +40,7 @@
     <![endif]-->
   </head>
   <body>
-	<div class="container">
-		<div class="row">
-				<h1>welcome to my world</h1>
-		</div>
-	</div>
+      {% block context %}
+      {% endblock context %}
   </body>
 </html>
