--- a/login/templates/forget.html
+++ b/login/templates/forget.html
@@ -9,12 +9,11 @@
 	{% load staticfiles %}
     <!-- Bootstrap -->
     <link href="{% static 'css/bootstrap.min.css' %}" rel="stylesheet">
-	<!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
-    <script src="https://cdn.bootcss.com/jquery/1.12.4/jquery.min.js"></script>
-    <!-- Include all compiled plugins (below), or include individual files as needed -->
-	<script src="{% static 'js/jquery.validate.js' %}"></script>
-    <script src="{% static 'js/bootstrap.min.js' %}"></script>
+	<link href="{% static 'css/bootstrapValidator.min.css' %}" rel="stylesheet">
+	<script src="https://cdn.bootcss.com/jquery/1.12.4/jquery.min.js"></script>
+	<script src="{% static 'js/bootstrapValidator.min.js' %}"></script>
 	<script src="{% static 'js/login.js' %}"></script>
+
     <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
     <!--[if lt IE 9]>
@@ -23,9 +22,21 @@
     <![endif]-->
   </head>
   <body>
-	<div class="container">
+	<div class="container" style="padding-top : 5px">
 		<div class="row">
-				<h1>welcome to my world</h1>
+			<div class="col-sm-10">
+				<form class="form-inline" action="/login/" method="post" onsubmit="return validate_loginform()" >
+					{% csrf_token %}
+						<div class="form-group" id = "email">
+                            {{ form.username.errors }}
+                            <label>请填写邮箱地址</label>
+							<input type="text" name="username" class="form-control" id="{{ form.username.id_for_label }}" placeholder="Email"> 
+						</div>
+					<div class="form-group" style="vertical-align:top">
+						   <button class="btn btn-primary">提交</a></button>
+				    </div>
+				</form>
+			</div>
 		</div>
 	</div>
   </body>
