--- a/login/templates/login.html
+++ b/login/templates/login.html
@@ -1,58 +1,35 @@
-<!DOCTYPE html>
-<html lang="zh-CN">
-  <head>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <!-- 上述3个meta标签*必须*放在最前面，任何其他内容都*必须*跟随其后！ -->
-    <title>Bootstrap 101 Template</title>
-	{% load staticfiles %}
-    <!-- Bootstrap -->
-    <link href="{% static 'css/bootstrap.min.css' %}" rel="stylesheet">
-
-    <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
-    <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
-    <!--[if lt IE 9]>
-      <script src="https://cdn.bootcss.com/html5shiv/3.7.3/html5shiv.min.js"></script>
-      <script src="https://cdn.bootcss.com/respond.js/1.4.2/respond.min.js"></script>
-    <![endif]-->
-  </head>
-  <body>
+{% extends "base/base.html" %}
+			{% block context %}
 	<div class="container">
-		<div class="row">
+		<div class="row mycenter">
+			<div class="col-md-12">
+				<label>用户登录</label>
+				<form class="form-inline border" action="/login/" method="post" onsubmit="return validate_loginform()" >
+					{% csrf_token %}
+					<div class = "mypading" >
+						<div class="form-group  border" id = "email">
+							{{ form.username.errors }}
+							<input type="text" name="username" class="form-control" id="{{ form.username.id_for_label }}" placeholder="Email"> 
+						</div>
+					</div>
+					<div class="mypading">
+						<div class="form-group  border mypading" id = "password1">
+						{{ form.password.errors }}
+							<input type="password" name="password" class="form-control" id="{{ form.password.id_for_label }}" placeholder="Password">
+						</div>
+					<div class="mypading">
+						<div class="form-group  border mypading" id = "checkcode">
+							<input type="text" name="checkcode" class="form-control" id="{{ form.password.id_for_label }}" placeholder="Password">
+							<img  onclick='ChangeCode(this);' id='imgCode' src='code/' title='点击更新' />
+						</div>
+					</div>
+					<div class="form-group">
+						   <button type="submit" class="btn btn-primary">登录</button>
+						   <button class="btn btn-primary"><a href="{% url 'login:register' %}" style="color:white">免费注册</a></button>
+						   <a href="{% url 'login:forget' %}" style="color:blue">忘记密码</a>
+				    </div>
+				</form>
+			</div>
 		</div>
 	</div>
-	<div class="container" style="padding-top : 5px">
-		<div class="row">
-			<form class="form-horizontal" action="/login/" method="post">
-			{% csrf_token %}
-  <div class="form-group">
-  {{ form.username.errors }}
-    <label for="{{ form.username.id_for_label }}" class="col-sm-2 control-label sr-only">Email</label>
-    <div class="col-sm-10 ">
-      <input type="email" name="username" class="form-control" id="{{ form.username.id_for_label }}" placeholder="Email">
-    </div>
-  </div>
-  <div class="form-group ">
-  {{ form.password.errors }}
-    <label for="{{ form.password.id_for_label }}" class="col-sm-2 control-label sr-only">Password</label>
-    <div class="col-sm-10 ">
-      <input type="password" name="password" class="form-control" id="{{ form.password.id_for_label }}" placeholder="Password">
-    </div>
-  </div>
-  <div class="form-group">
-    <div class="col-sm-offset-2 col-sm-10">
-      <button type="submit" class="btn btn-default">登录</button>
-	  <button type="submit" class="btn btn-default"><a href='/register/'>免费注册</a></button>
-    </div>
-  </div>
-</form>
-		</div>
-	</div>
-	
-    <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
-    <script src="https://cdn.bootcss.com/jquery/1.12.4/jquery.min.js"></script>
-    <!-- Include all compiled plugins (below), or include individual files as needed -->
-    <script src="{% static 'js/bootstrap.min.js' %}"></script>
-  </body>
-</html>
+	{% endblock context %}
