--- a/login/templates/login.html
+++ b/login/templates/login.html
@@ -19,7 +19,7 @@
 						</div>
 					<div class="mypading">
 						<div class="form-group  border mypading" id = "checkcode">
-							<input type="text" name="checkcode" class="form-control" id="{{ form.password.id_for_label }}" placeholder="Password">
+							<input type="text" name="checkcode" class="form-control" id="{{ form.password.id_for_label }}" placeholder="验证码">
 							<img  onclick='ChangeCode(this);' id='imgCode' src='code/' title='点击更新' />
 						</div>
 					</div>
