--- a/login/templates/main.html
+++ b/login/templates/main.html
@@ -48,7 +48,7 @@
             <ul class="dropdown-menu">
               <li><a>{{ user.username }}</a></li>
               <li role="separator" class="divider"></li>
-              <li><a href="logout">Logout</a></li>
+              <li><a href="/login/logout">Logout</a></li>
             </ul>
           </li>
         </ul>
